--- a/.github/workflows/create-all-txt-files.yml
+++ b/.github/workflows/create-all-txt-files.yml
@@ -5,7 +5,7 @@ name: Create "-all.txt" Files
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
-  push:
+  status:
     branches: [ main ]
     paths-ignore:
       - '**all.txt'
