--- a/.github/workflows/create-all-txt-files.yml
+++ b/.github/workflows/create-all-txt-files.yml
@@ -31,7 +31,7 @@ jobs:
         sh helper-scripts/combine-all.sh
 
     - name: Deploy 🚀
-      uses: JamesIves/github-pages-deploy-action@releases/v3
+      uses: JamesIves/github-pages-deploy-action@4.0.0
       with:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         BRANCH: main # The branch the action should deploy to.
